--- a/static/css/tile_selector.css
+++ b/static/css/tile_selector.css
@@ -15,7 +15,7 @@ body {
 .content{
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -38,6 +38,7 @@ body {
     border-width: 1px;
     border-radius: 10px;
     box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    cursor: pointer;
 }
 
 .tile-image{
@@ -142,24 +143,57 @@ body {
     width: 10%;
     margin: 10px;
     object-fit: cover;
+    cursor: pointer;
     /* border-radius: 10px; */
     /* flex: 0 0 10%; */
 }
 .top-crop{
     height: 100%;
-    clip-path: inset(20% 0 0 0);
+    clip-path: inset(17.43% 0 0 0);
 }
 .right-crop{
     height: 100%;
-    clip-path: inset(0 20% 0 0);
+    clip-path: inset(0 17.43% 0 0);
 }
 .bottom-crop{
     height: 100%;
-    clip-path: inset(0 0 20% 0);
+    clip-path: inset(0 0 17.43% 0);
 }
 .left-crop{
     height: 100%;
-    clip-path: inset(0 0 0 20%);
+    clip-path: inset(0 0 0 17.43%);
+}
+#selected-tiles{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.selected-tile{
+    color: white;
+    border: 3px solid rgba(0,0,0,0.2);
+    border-radius: 8px;
+    margin: 10px;
+    display: flex;
+    width: 80px;
+    height: 80px;
+    box-shadow: 0px 0px 10px 0px black;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.selected-tile-image{
+    height: auto;
+    width: 100%;
+    background-size: cover;
+    background-position: "center";
+    background-repeat: "no-repeat";
+    border:"1px solid black";
+    box-shadow: "0px 0px 10px 0px black";
+    cursor: "pointer";
 }
 
 @media only screen and (max-width: 950px) {
