--- a/static/css/tile_selector.css
+++ b/static/css/tile_selector.css
@@ -252,6 +252,33 @@ body {
     margin: 10px;
 }
 
+.final-design .final-design-row{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.final-design .final-design-row .final-design-tile{
+    height: 64.5px;
+    width: 64.5px;
+    clip-path: inset(17.43% 0 0 0);
+    /* background-image: url('../images/Field_Tile_CPRISB_Dark_Grey__12x12/Field Tile CPRISB Dark Grey  12x12 F01.jpg'); */
+    background-size: cover;
+    margin-top: -11.4px;
+}
+.final-design  .final-design-row .half-left{
+    /* height: 100%; */
+    /* width: 64.5px; */
+    clip-path: inset(17.43% 0 0 50%);
+}
+
+.final-design  .final-design-row .half-right{
+    /* height: 100%; */
+    /* width: 64.5px; */
+    clip-path: inset(17.43% 50% 0 0);
+}
+
 .tile1{
     /* background-image: url('../images/9x9 Images/Dark Grey.jpg'); */
 }
