--- a/static/css/tile_selector.css
+++ b/static/css/tile_selector.css
@@ -204,7 +204,7 @@ body {
 .selected-tile-image{
     height: auto;
     width: 100%;
-    background-size: cover;
+    background-size: 100% 100%;
     background-position: "center";
     background-repeat: "no-repeat";
     border:"1px solid black";
@@ -264,8 +264,9 @@ body {
     width: 64.5px;
     clip-path: inset(17.43% 0 0 0);
     /* background-image: url('../images/Field_Tile_CPRISB_Dark_Grey__12x12/Field Tile CPRISB Dark Grey  12x12 F01.jpg'); */
-    background-size: cover;
+    /* background-size: cover; */
     margin-top: -11.4px;
+    background-size: 100% 100%;
 }
 .final-design  .final-design-row .half-left{
     /* height: 100%; */
