--- a/static/css/tile_selector.css
+++ b/static/css/tile_selector.css
@@ -277,7 +277,8 @@ body {
     width: 64.5px;
     margin-top: -11.5px;
     margin-right: -0.3px;
-    clip-path: inset(17.43% 0 0 0); 
+    clip-path: inset(17.43% 0 0 0);
+    border-bottom: 3px solid rgba(0,0,0,0.8);
 }
 .final-design  .final-design-row .half-left{
     /* height: 100%; */
